# TDS_proj2

./: .gitignore  LICENSE  README.md  autolysis.py  pyproject.toml  tempCodeRunnerFile.python
goodreads/: README.md
happiness/: README.md
media/: README.md
