[tool.poetry]
name = "tds-proj2"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
alembic = ">=1.14.0"
fastapi = ">=0.115.6"
sqlalchemy = ">=2.0.36"
uvicorn = ">=0.32.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.4"
openai = "0.28"

[tool.poetry.dev-dependencies]
ruff = ">=0.8.2"
